--- a/index.html
+++ b/index.html
@@ -10,7 +10,32 @@
 </head>
 <body>
     <header>
-        <h1>Эстафета памяти</h1>
+    <!-- Верхняя часть шапки - информация об организации -->
+    <div class="org-header">
+        <div class="org-logo">
+            <img src="images/org-logo.png" alt="Логотип организации">
+        </div>
+        <div class="org-info">
+            <p>Департамент образования и науки города Москвы </p>
+            <p>Южный административный округ</p>
+            <h2>Государственное бюджетное профессиональное образовательное учреждение города Москвы «Московский колледж управления, гостиничного бизнеса и информационных технологий «Царицыно»</h2>
+        </div>
+    </div>
+
+    <!-- Основная шапка с бегущей строкой -->
+    <div class="main-header">
+        <!-- Бегущая строка с фотографиями -->
+        <div class="photo-marquee">
+            <div class="marquee-content">
+                <!-- Фотографии будут добавляться динамически -->
+            </div>
+        </div>
+        
+        <!-- Логотип сайта поверх бегущей строки -->
+        <div class="site-logo">
+            <img src="images/site-logo.png" alt="Логотип сайта">
+        </div>
+    </div>
     </header>
     
     <div class="controls">
